# openblaster

./: .gitignore  CMakeLists.txt  README.md
include/: eq_control.h  globals.h  led_control.h  parse_eq_preset.h  raw_cmd.h  usb_control.h
src/: eq_control.c  globals.c  led_control.c  main.c  parse_eq_preset.c  raw_cmd.c  usb_control.c
